[package]
name = "jetpack"
version = "0.5.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "A fast, modern automation platform"
homepage = "https://riff.cc/jetpack"
documentation = "https://docs.riff.cc/jetpack/"
repository = "https://github.com/riffcc/jetpack"
readme = "README.md"
keywords = ["automation", "devops", "deployment", "ssh"]
categories = ["command-line-utilities", "development-tools"]
include = ["src/", "version.sh", "LICENSE", "README.md"]

[lib]
name = "jetpack"
path = "src/lib.rs"

[dependencies]
once_cell = "1.21.4"
russh = "0.61.2"
russh-sftp = "2.3.0"
serde_derive = "1.0.228"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34+deprecated"
serde_json = { version = "1.0.150", features = ["preserve_order"] }
termimad = "0.34.1"
inline_colorization = "0.1.6"
rayon = "1.12.0"
handlebars = "6.4.1"
sha2 = "0.11.0"
hex = "0.4.3"
guid-create = "0.5.2"
expanduser = "1.2.2"
indexmap = { version = "2.14.0", features = ["serde"] }
chrono = "0.4.45"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
semver = "1.0.28"
tokio = { version = "1.52.3", features = ["full"] }
urlencoding = "2.1.3"
regex = "1.12.4"

[dev-dependencies]
tempfile = "3.27.0"
